--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,14 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
-    namespace 'com.salles.firstjavaapp'
+    namespace 'com.salles.siomai'
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.salles.firstjavaapp"
+        applicationId "com.salles.siomai"
         minSdk 24
         targetSdk 34
         versionCode 1
@@ -42,7 +43,8 @@ dependencies {
 
     // Room components
     implementation "androidx.room:room-runtime:$rootProject.roomVersion"
-    implementation 'androidx.appcompat:appcompat:1.6.1'//
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.firebase:firebase-firestore:24.10.0'//
     annotationProcessor "androidx.room:room-compiler:$rootProject.roomVersion"
     androidTestImplementation "androidx.room:room-testing:$rootProject.roomVersion"
 
@@ -53,7 +55,7 @@ dependencies {
 
     // UI
     implementation "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayoutVersion"
-    implementation "com.google.android.material:material:$rootProject.materialVersion"
+    implementation "com.google.android.material:material:1.11.0"
 
     // Testing
     testImplementation "junit:junit:$rootProject.junitVersion"
