--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,8 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    dependencies {
+        classpath 'com.google.gms:google-services:4.4.0'
+    }
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
 id 'com.android.application' version '8.1.4' apply false
 }
@@ -11,6 +15,6 @@ ext {
     roomVersion = '2.6.1'
     // testing
     junitVersion = '4.13.2'
-    espressoVersion = '3.4.0'
+    espressoVersion = '3.5.1'
     androidxJunitVersion = '1.1.5'
 }
