--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,13 +8,17 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher_siomai"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher_siomai_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FirstJavaApp"
+        android:theme="@style/Theme.SiomaiApp"
         tools:targetApi="31">
         <activity
-            android:name=".SalesActivity"
+            android:name=".ExpensesActivity"
             android:exported="false" />
+        <activity
+            android:name=".RevenueActivity"
+            android:exported="false"
+            android:windowSoftInputMode="stateHidden"/>
         <activity
             android:name=".ProductsActivity"
             android:exported="false" />
@@ -29,7 +33,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
